--- a/BookChain/BookChain/templates/index.html
+++ b/BookChain/BookChain/templates/index.html
@@ -1,7 +1,5 @@
-{% extends "layout.html" %}
-
+﻿{% extends "layout.html" %}
 {% block content %}
-
 <div class="jumbotron">
     <h1>Contenido</h1>
 </div>
