Commit Elisa navbar y footer

--- a/BookChain/BookChain/templates/layout.html
+++ b/BookChain/BookChain/templates/layout.html
@@ -16,8 +16,13 @@
     {% block body %} {% block navbar %} {% include 'navbar.html' %}{%-
     endblock navbar %}
     {% block content -%} {%- endblock content %}
-    
+
     {% endblock
     body %}
+
+    <footer>
+         {% include 'footer.html' %}
+    </footer>
 </body>
+
 
