--- a/BookChain/BookChain/templates/layout.html
+++ b/BookChain/BookChain/templates/layout.html
@@ -1,10 +1,11 @@
-﻿{% extends 'bootstrap/base.html' %}
+﻿<!--{% extends 'bootstrap/base.html' %}-->
 {%- block head %}
 {{super()}}
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <title>
     {% block title %}BookChain{%
     endblock title %}
@@ -15,9 +16,31 @@
 <body {% block body_attribs %} class="text-center" {% endblock body_attribs %}>
     {% block body %} {% block navbar %} {% include 'navbar.html' %}{%-
     endblock navbar %}
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-primary alert-dismissible fade show" role="alert">
+        <span>{{ message }}</span>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+
     {% block content -%} {%- endblock content %}
-    
+    {% block scripts %}
+    {{ super() }}
+    <script>
+        $("document").ready(function () {
+            setTimeout(function () {
+                $(".alert").remove();
+            }, 5000); // 5 secs
+
+        });
+       
+    </script>
+
+    {% endblock %}
     {% endblock
     body %}
 </body>
+
 
