--- a/BookChain/BookChain/templates/layout.html
+++ b/BookChain/BookChain/templates/layout.html
@@ -35,12 +35,17 @@
             }, 5000); // 5 secs
 
         });
-       
+
     </script>
 
     {% endblock %}
+    <footer>
+        <hr />
+        <div class="container" style="height:100px">Footer</div>
+    </footer>
     {% endblock
     body %}
+
 </body>
 
 
