--- a/BookChain/BookChain/templates/books.html
+++ b/BookChain/BookChain/templates/books.html
@@ -9,10 +9,17 @@
     <form action="#" onsubmit="handle" method="post">
         {{search_box_form.hidden_tag() }}
         {{search_box_form.search(class='form-control',**{'placeholder':'Busqueda'})}}
-
+        <div class="nav-states">
+            <ul>
+                <li>Disponible</li>
+                <li>Solicitado</li>
+                <li>Prestado</li>
+            </ul>
+        </div>
     </form>
-
+   
 </div>
-{{ macros.render_books(books,None,constants,my_books,request_form) }}
+
+{{ macros.render_books(books,get_request,constants,my_books,evaluate_request_form) }}
 
 {% endblock %}
