--- a/BookChain/BookChain/templates/navbar.html
+++ b/BookChain/BookChain/templates/navbar.html
@@ -1,8 +1,8 @@
-﻿<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+﻿<!--<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#"></a>
         <img src="{{url_for('static', filename='images/BC.jpg')}}" width="186" height="45" class="img-fluid" alt="Responsive image">
-        <!-- <button (abajo esta el resto) -->
+        
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -25,43 +25,43 @@
             <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Buscar</button>
         </form>
     </div>
-</nav>
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
-    <a class="navbar-brand" href="#">Book Chain</a>
-    <button class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarsExample09"
-            aria-controls="navbarsExample09"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+</nav> -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+        <a class="navbar-brand" href="#">
+            <img src="{{url_for('static', filename='images/book.png')}}" width="30" height="30" class="d-inline-block align-top" alt="">
+            BookChain
+        </a>
+        <button class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarsExample09"
+                aria-controls="navbarsExample09"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarsExample09">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{{url_for('home')}}">
-                    Inicio <span class="sr-only"></span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{url_for('newbook')}}">Registrar Libro</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Mis Libros</a>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-md-0">
-            <input class="form-control"
-                   type="text"
-                   placeholder="Buscar"
-                   aria-label="Search" />
-            {% if current_user.is_authenticated %}
-            <a href="{{ url_for('auth.logout') }}">Logout</a>
-            {% endif %}
-            <a class="nav-link" href="#">Mi Perfil</a>
-        </form>
-    </div>
-</nav>
-     -->
+        <div class="collapse navbar-collapse" id="navbarsExample09">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{url_for('home')}}">
+                        Inicio <span class="sr-only"></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('newbook')}}">Registrar Libro</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('mybooks')}}">Mis Libros</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-md-0">
+
+                {% if current_user.is_authenticated %}
+                <a href="{{ url_for('auth.logout') }}" class="nav-link">Logout</a>
+                {% endif %}
+
+            </form>
+        </div>
+    </nav>
+   
