--- a/BookChain/BookChain/templates/footer.html
+++ b/BookChain/BookChain/templates/footer.html
@@ -1,3 +1,3 @@
-﻿<p> Posted by: &copy; 2020 Matesoft - Montevideo, Uruguay - Contacto: 
+<p> Posted by: &copy; 2020 Matesoft - Montevideo, Uruguay - Contacto: 
     <a href="mailto:matesoft96@example.com">matesoft96@example.com</a>
     </p>
