--- a/BookChain/BookChain/templates/macros.html
+++ b/BookChain/BookChain/templates/macros.html
@@ -1,5 +1,5 @@
 {% import 'bootstrap/wtf.html' as wtf%}{% macro render_books(books,get_request,constants,my_books,request_form) %}
-<div class="container" style="width:65%">
+<div class="container" >
     <!--<div class="card-columns">-->
     <div class="row">
         {%for book in books%}
