--- a/BookChain/BookChain/templates/404.html
+++ b/BookChain/BookChain/templates/404.html
@@ -1,4 +1,4 @@
-﻿{% extends 'layout.html'%} {% block title %} {{super()}} 404 {%endblock%} {%block
+{% extends 'layout.html'%} {% block title %} {{super()}} 404 {%endblock%} {%block
 content%}
 <h1>404 wachin</h1>
 {%endblock%}
