--- a/BookChain/BookChain/templates/books.html
+++ b/BookChain/BookChain/templates/books.html
@@ -1,25 +1,45 @@
-﻿{% extends "layout.html" %}{% import 'bootstrap/wtf.html' as wtf%} {% import 'macros.html' as macros %}
+{% extends "layout.html" %}{% import 'bootstrap/wtf.html' as wtf%} {% import 'macros.html' as macros %}
+
 {% block content %}
-<div class="container" style="padding-top:10px">
-    <h2 class="title">{{title}}</h2>
-
-</div>
-<div class="container" id="search-box">
-
-    <form action="#" onsubmit="handle" method="post">
-        {{search_box_form.hidden_tag() }}
-        {{search_box_form.search(class='form-control',**{'placeholder':'Busqueda'})}}
-        <div class="nav-states">
-            <ul>
-                <li>Disponible</li>
-                <li>Solicitado</li>
-                <li>Prestado</li>
+<div id="leftbox">
+    <div class="row">
+        <div class="col-4" id="left-filter">
+            <div id="filter-title"><h4 class="title">Filtro</h4></div>
+            
+            <ul class="navbar-nav mr-auto"style="margin-left:10px;">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{url_for('home')}}">
+                        Registrados <span class="sr-only"></span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('newbook')}}">Solicitados</a>
+                </li>
             </ul>
         </div>
-    </form>
-   
+    </div>
+</div>
+<div id="middlebox">
+    <div class="container" style="padding-top:10px">
+        <h2 class="title">{{title}}</h2>
+    </div>
+    <div class="container" id="search-box">
+        
+        <form action="#" onsubmit="handle" method="post">
+            {{search_box_form.hidden_tag() }}
+            {{search_box_form.search(class='form-control',**{'placeholder':'Busqueda'})}}
+            <div class="nav-states">
+                <ul>
+                    <li>Disponible</li>
+                    <li>Solicitado</li>
+                    <li>Prestado</li>
+                </ul>
+            </div>
+        </form>
+
+    </div>
+    {{ macros.render_books(books,get_request,constants,my_books,evaluate_request_form) }}
 </div>
 
-{{ macros.render_books(books,get_request,constants,my_books,evaluate_request_form) }}
 
 {% endblock %}
