--- a/BookChain/BookChain/templates/layout.html
+++ b/BookChain/BookChain/templates/layout.html
@@ -14,18 +14,28 @@
       href="{{ url_for('static',filename='content/mystyles.css')}}" />
 {%- endblock head %}
 <body {% block body_attribs %} class="text-center" {% endblock body_attribs %}>
-    {% block body %} {% block navbar %} {% include 'navbar.html' %}{%-
-    endblock navbar %}
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-primary alert-dismissible fade show" role="alert">
-        <span>{{ message }}</span>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    {% endfor %}
+    {% block body %}
+    <div id="content">
+        {% block navbar %}
+        {% include 'navbar.html' %}
+        {%- endblock navbar %}
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            <span>{{ message }}</span>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
 
-    {% block content -%} {%- endblock content %}
+        {% block content -%}
+        {%- endblock content %}
+    </div>
+    <div id="footer">
+        {% block footer %}
+        &copy; Copyright 2010 by <a href="http://domain.invalid/">you</a>.
+        {% endblock %}
+    </div>
     {% block scripts %}
     {{ super() }}
     <script>
@@ -39,10 +49,6 @@
     </script>
 
     {% endblock %}
-    <footer>
-        <hr />
-        <div class="container" style="height:100px">Footer</div>
-    </footer>
     {% endblock
     body %}
 
