--- a/BookChain/BookChain/templates/navbar.html
+++ b/BookChain/BookChain/templates/navbar.html
@@ -1,32 +1,5 @@
-﻿<!--<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="#"></a>
-        <img src="{{url_for('static', filename='images/BC.jpg')}}" width="186" height="45" class="img-fluid" alt="Responsive image">
-        
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{url_for ('index')}}">Inicio <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Comentarios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tertulias</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Mi perfil</a>
-                </li>
-            </ul>
-        </div>
 
-        <form class="form-inline ">
-            <input class="form-control mr-sm-2" type="search" placeholder="Buscar libro" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Buscar</button>
-        </form>
-    </div>
-</nav> -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
         <a class="navbar-brand" href="#">
             <img src="{{url_for('static', filename='images/book.png')}}" width="30" height="30" class="d-inline-block align-top" alt="">
             BookChain
@@ -58,7 +31,11 @@
             <form class="form-inline my-2 my-md-0">
 
                 {% if current_user.is_authenticated %}
-                <a href="{{ url_for('auth.logout') }}" class="nav-link">Logout</a>
+                <a href="{{ url_for('auth.logout') }}" class="nav-link">Cerrar Sesion</a>
+                {% endif %}
+                {% if not current_user.is_authenticated %}
+                <a href="{{ url_for('auth.login') }}" class="nav-link">Iniciar Sesion</a>
+                <a href="{{ url_for('auth.signup') }}" class="nav-link">Registrarse</a>
                 {% endif %}
 
             </form>
