--- a/BookChain/BookChain/templates/newbook.html
+++ b/BookChain/BookChain/templates/newbook.html
@@ -1,4 +1,4 @@
-﻿{% extends "layout.html" %}{% import 'bootstrap/wtf.html' as wtf%}
+{% extends "layout.html" %}{% import 'bootstrap/wtf.html' as wtf%}
 {% block content %}
 <div class="jumbotron">
     <div class="container">
