--- a/BookChain/BookChain/templates/signup.html
+++ b/BookChain/BookChain/templates/signup.html
@@ -1,8 +1,32 @@
-﻿{% extends 'layout.html'%} {% import 'bootstrap/wtf.html' as wtf%}{%block
+{% extends 'layout.html'%} {% import 'bootstrap/wtf.html' as wtf%}{%block
 content%}
-<div class="container">
-    <h1>Registro</h1>
-    {{wtf.quick_form(signup_form)}}
+<div id="leftbox">
+    <div class="row">
+        <div class="col-4">
+            <div style="display:none;" class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Mis Libros</a>
+                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Libros Solicitados</a>
+            </div>
+        </div>
+    </div>
 </div>
+<div id="middlebox">
+    <div class="container">
+        <h1>Registro</h1>
+        {{wtf.quick_form(signup_form)}}
+    </div>
+</div>
+<style>
+    .navbar-brand {
+        display: none;
+    }
 
+    .navbar-toggler {
+        display: none;
+    }
+
+    .navbar-nav {
+        display: none;
+    }
+</style>
 {%endblock%}
