Changes in book fields and style

--- a/BookChain/BookChain/templates/books.html
+++ b/BookChain/BookChain/templates/books.html
@@ -38,7 +38,7 @@
         </form>
 
     </div>
-    {{ macros.render_books(books,get_request,constants,my_books,evaluate_request_form) }}
+    {{ macros.render_books(books,get_request,constants,my_books,evaluate_request_form,get_lang,get_genre) }}
 </div>
 
 
