--- a/BookChain/BookChain/templates/index.html
+++ b/BookChain/BookChain/templates/index.html
@@ -24,6 +24,6 @@
         </form>
 
     </div>
-    {{ macros.render_books(books,None,constants,my_books,request_form) }}
+    {{ macros.render_books(books,None,constants,my_books,request_form,get_lang,get_genre) }}
 </div>
     {% endblock %}
