--- a/BookChain/BookChain/templates/macros.html
+++ b/BookChain/BookChain/templates/macros.html
@@ -1,21 +1,66 @@
-{% import 'bootstrap/wtf.html' as wtf%}{% macro render_books(books,get_request,constants,my_books,request_form) %}
+{% import 'bootstrap/wtf.html' as wtf%}{% macro render_books(books,get_request,constants,my_books,request_form,get_lang,get_genre) %}
 <div class="container" >
     <!--<div class="card-columns">-->
     <div class="row">
         {%for book in books%}
         <div class="col-sm-4">
             {% if book.to_dict()['state'].id==constants.STATE_AVAILABLE %}
-            <div class="card border-success mb-3" id="{{book.id}}">
+            <div class="card border-success mb-3" id="{{book.id}}" style="border-bottom: 4px solid #28a745!important">
                 {% elif book.to_dict()['state'].id==constants.STATE_REQUESTED %}
-                <div class="card border-warning mb-3" id="{{book.id}}">
+                <div class="card border-warning mb-3" id="{{book.id}}" style="border-bottom: 4px solid #ffc107!important">
                     {% else %}
-                    <div class="card border-primary mb-3" id="{{book.id}}">
+                    <div class="card border-primary mb-3" id="{{book.id}}" style="border-bottom: 4px solid #007bff!important">
                         {% endif %}
-                        <img class="card-img-top" src="{{url_for('static',filename='images/book-vector.jpg')}}" alt="Card image cap">
+                        <!--<img class="card-img-top" src="{{url_for('static',filename='images/book-vector.jpg')}}" alt="Card image cap">-->
+                        <img class="card-img-top" src="{{book.to_dict()['image_url']}}" alt="Card image cap" width="245px" height="340px">
+
                         <div class="card-body">
                             <h5 class="card-title">{{book.to_dict()['name']}}</h5>
                             <p class="card-text">{{book.to_dict()['description']}}</p>
-                            <a href="" class="btn btn-outline-info">Detalles</a>
+                            <!--<a href="" class="btn btn-outline-info">Detalles</a>-->
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#detailsModal{{book.id}}">
+                                Detalles
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="detailsModal{{book.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <form method="post" action="" class="form-signin">
+                                        <div class="modal-content">
+
+
+
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">{{book.to_dict()['name']}}</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <label>Descripcion</label>
+                                                <br />
+                                                <label style="color:grey">{{book.to_dict()['description']}}</label>
+                                                <br />
+                                                <label>Autor</label>
+                                                <br />
+                                                <label style="color:grey">{{book.to_dict()['author']}}</label>
+                                                <br />
+                                                <label>Genero</label>
+                                                <br />
+                                                <label style="color:grey">{{get_genre(book.to_dict()['genre'])}}</label>
+                                                <br />
+                                                <label>Idioma</label>
+                                                <br />
+                                                <label style="color:grey">{{get_lang(book.to_dict()['lang'])}}</label>
+
+                                            </div>
+
+
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
                             {% if (book.to_dict()['state'].id==constants.STATE_AVAILABLE and my_books==False)%}
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal{{book.id}}">
@@ -29,7 +74,7 @@
                                         <div class="modal-content">
 
                                             {{ request_form.hidden_tag() }}
-                                           
+
                                             <div class="modal-header">
                                                 <h5 class="modal-title" id="exampleModalLabel">Solicitar prestamo de Libro</h5>
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -64,7 +109,7 @@
                                 <div class="modal-dialog" role="document">
                                     <form method="post" action="" class="form-signin">
                                         {{ request_form.hidden_tag() }}
-                                        
+
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <h5 class="modal-title" id="exampleModalLabel">Solicitud</h5>
@@ -75,7 +120,7 @@
                                             <div class="modal-body">
                                                 <label>Comentario Solicitante</label>
                                                 <br />
-                                                <label style="color:grey">{{get_request(book.id)}}</label>
+                                                <label style="color: grey">{{get_request(book.id)}}</label>
                                                 {{request_form.book(**{'id':'book','type':'hidden','value':book.id})}}
                                                 {{request_form.owner_comment(class='form-control',**{'placeholder':'Comentarios','id':'username'})}}
                                             </div>
