--- a/BookChain/BookChain/templates/macros.html
+++ b/BookChain/BookChain/templates/macros.html
@@ -1,4 +1,4 @@
-{% import 'bootstrap/wtf.html' as wtf%}{% macro render_books(books,get_request,constants,my_books,request_form,get_lang,get_genre) %}
+{% import 'bootstrap/wtf.html' as wtf%}{% macro render_books(books,get_request,constants,my_books,requested_books,request_form,get_lang,get_genre) %}
 <div class="container" >
     <!--<div class="card-columns">-->
     <div class="row">
@@ -61,7 +61,7 @@
                                     </form>
                                 </div>
                             </div>
-                            {% if (book.to_dict()['state'].id==constants.STATE_AVAILABLE and my_books==False)%}
+                            {% if (book.to_dict()['state'].id==constants.STATE_AVAILABLE and my_books==False and requested_books==False)%}
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal{{book.id}}">
                                 Solicitar
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                             <!--<a href="" class="btn btn-outline-info">Solicitar</a>-->
-                            {% elif book.to_dict()['state'].id==constants.STATE_REQUESTED %}
+                            {% elif book.to_dict()['state'].id==constants.STATE_REQUESTED and requested_books==False %}
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal{{book.id}}">
                                 Ver Solicitud
@@ -125,8 +125,8 @@
                                                 {{request_form.owner_comment(class='form-control',**{'placeholder':'Comentarios','id':'username'})}}
                                             </div>
                                             <div class="modal-footer">
-                                                {{request_form.approved(class='btn btn-secondary')}}
-                                                {{request_form.denegated(class='btn btn-primary')}}
+                                                {{request_form.denegated(class='btn btn-secondary')}}
+                                                {{request_form.approved(class='btn btn-primary')}}
                                                 <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Aprobar</button>-->
                                                 <!--<button type="button" class="btn btn-primary">Denegar</button>-->
                                             </div>
@@ -135,6 +135,35 @@
                                 </div>
                             </div>
                             <!--<a href="" class="btn btn-outline-info">Ver Solicitud</a>-->
+                            {% elif requested_books==True and book.to_dict()['state'].id!=constants.STATE_REQUESTED %}
+                            <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#givebackModal{{book.id}}">
+                                Devolver
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="givebackModal{{book.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <form method="post" action="" class="form-signin">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">&#191; Estas seguro que deseas devolver el libro {{book.to_dict()['name']}} &#63;</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <!--<input type="hidden" value="foo" name="user_id" />-->
+
+                                            </div>
+                                            <div class="modal-footer">
+                                                <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+                                                <!--<button type="button" class="btn btn-primary">Enviar Solicitud</button>-->
+
+                                            </div>
+
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
                             {% endif %}
                         </div>
                     </div>
